--- a/Portfolio-architecte-sophie-bluel/FrontEnd/assets/style.css
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/assets/style.css
@@ -2,7 +2,8 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,500;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Syne:wght@700&family=Work+Sans:ital,wght@0,500;1,500&display=swap');
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -68,7 +69,8 @@ h1{
 	font-family: 'Syne';
 	font-size: 22px;
 	font-weight: 800;
-	color: #B1663C
+	color: #B1663C;
+	margin-bottom: 4px;
 }
 
 h1 > span {
@@ -187,7 +189,7 @@ footer nav ul {
 }
 /* JS Content */
 
-.list{
+.filtres{
 	
 	display: flex;
 	justify-content: center;
@@ -199,7 +201,7 @@ footer nav ul {
 	
 
 }
-.list_item{
+.filtre-item{
 	
 	display: inline;
 	color: #1D6154;
@@ -215,10 +217,152 @@ footer nav ul {
 	margin-left: 10px;
 	white-space: nowrap;
 }
-.list_item{
+.filtre-item:hover{
 	cursor: pointer;
 }
-.active{
+.active
+{
 	color: white;
 	background-color:  #1D6154;;
+}
+.login{
+	color: black;
+	text-decoration: none;
+}
+.form{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+}
+.log-in{
+	
+margin-bottom: 37px;
+font-family: 'Syne';
+font-style: normal;
+font-weight: 700;
+font-size: 30px;
+line-height: 36px;
+text-align: center;
+color: #1D6154;
+text-decoration: none;
+	
+}
+.label{
+	color: #3D3D3D;
+	font-family: Work Sans;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16px;
+	display: flex;
+	justify-content: flex-start;
+	margin: 2em 0 1em 0;
+}
+.input-form{
+	margin-bottom: 30px;
+	text-align: center;
+}
+.input-form [type="text"]{
+	width: 379px;
+	height: 51px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	
+}
+.submit{
+	color: rgba(255, 255, 255, 1);
+	font-size: 14px;
+	font-family: Syne;
+	font-weight: 700;
+	line-height: 17px;
+	text-align: center;
+	width: 179px;
+	height: 36px;
+	background: #1D6154;
+	border: none;
+	margin-bottom: 28px;
+	cursor: pointer;
+}
+.forget{
+	font-family:Work Sans;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16px;
+	text-decoration-line: underline;
+	color: #3D3D3D;
+
+}
+.login{
+	color: black;
+	text-decoration: none;
+}
+.form{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+}
+.log-in{
+	
+margin-bottom: 37px;
+font-family: 'Syne';
+font-style: normal;
+font-weight: 700;
+font-size: 30px;
+line-height: 36px;
+text-align: center;
+color: #1D6154;
+text-decoration: none;
+	
+}
+.label{
+	color: #3D3D3D;
+	font-family: Work Sans;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16px;
+	display: flex;
+	justify-content: flex-start;
+	margin: 2em 0 1em 0;
+}
+.input-form{
+	margin-bottom: 30px;
+	text-align: center;
+}
+.input-form [type="text"]{
+	width: 379px;
+	height: 51px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	
+}
+.submit{
+	color: rgba(255, 255, 255, 1);
+	font-size: 14px;
+	font-family: Syne;
+	font-weight: 700;
+	line-height: 17px;
+	text-align: center;
+	border-radius: 60px;
+	width: 179px;
+	height: 36px;
+	background: #1D6154;
+	border: none;
+	margin-bottom: 28px;
+	cursor: pointer;
+}
+.forget{
+	font-family:Work Sans;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16px;
+	text-decoration-line: underline;
+	color: #3D3D3D;
+
 }
